--- a/app/src/main/res/layout/view.xml
+++ b/app/src/main/res/layout/view.xml
@@ -9,8 +9,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="4dp"
-        android:backgroundTint="@color/black"
+        android:elevation="2dp"
+        android:backgroundTint="@color/dark_grey"
         app:cardCornerRadius="10dp">
 
 
@@ -41,7 +41,7 @@
                 android:text="@string/description"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:textColor="@color/white"
+                android:textColor="@color/pale_grey"
                 android:textStyle="normal"/>
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -52,7 +52,7 @@
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:text="@string/date"
-                android:textColor="@color/white"
+                android:textColor="@color/pale_grey"
                 android:textStyle="bold"/>
 
         </LinearLayout>
