--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -10,13 +10,8 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/add_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        style="@style/TitleStyle"
         android:text="@string/add_title"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -37,14 +32,9 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/add_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        style="@style/TitleStyle"
         android:layout_marginTop="32dp"
         android:text="@string/add_description"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -65,14 +55,9 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/appCompatTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        style="@style/TitleStyle"
         android:layout_marginTop="32dp"
         android:text="@string/add_date"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -96,8 +81,7 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btn_calendar"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        style="@style/AddNew_ImageBtn"
         android:background="@drawable/ic_calendar_btn_bg"
         android:src="@drawable/ic_calendar_btn"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -109,8 +93,7 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btn_save"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        style="@style/AddNew_ImageBtn"
         android:background="@drawable/ic_btn_bg"
         android:src="@drawable/ic_save_btn"
         app:layout_constraintBottom_toBottomOf="parent"
