--- a/app/src/main/res/layout/view.xml
+++ b/app/src/main/res/layout/view.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="22sp"
                 android:text="@string/title"
-                android:textColor="@color/white"
+                android:textColor="@color/orangish_yellow"
                 android:textStyle="bold"
                 android:ellipsize="end"
                 android:singleLine="true"/>
