--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashScreen">
-
+e
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/splashText"
         android:layout_width="wrap_content"
@@ -16,6 +16,7 @@
         android:textColor="@color/orangish_yellow"
         android:textSize="42sp"
         android:textStyle="normal"
+        android:letterSpacing="0.03"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
