--- a/app/src/main/res/anim/splash_text_animation.xml
+++ b/app/src/main/res/anim/splash_text_animation.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--    <translate-->
-    <!--        android:fromXDelta="0%"-->
-    <!--        android:fromYDelta="-100%" />-->
+    <translate
+        android:duration="1200"
+        android:fromXDelta="0%"
+        android:fromYDelta="-100%" />
 
-    <rotate
-        android:fromDegrees="0"
-        android:pivotX="50%"
-        android:pivotY="50%"
-        android:toDegrees="180" />
+    <!--    <rotate-->
+    <!--        android:duration="1200"-->
+    <!--        android:fromDegrees="0"-->
+    <!--        android:pivotX="50%"-->
+    <!--        android:pivotY="50%"-->
+    <!--        android:toDegrees="180" />-->
 
-    <!--    <alpha-->
-    <!--        android:fromAlpha="0.1"-->
-    <!--        android:toAlpha="1.0" />-->
+        <alpha
+            android:fromAlpha="0.1"
+            android:toAlpha="1.0" />
 
 
 </set>
