Validated few things for better performance

--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -23,7 +23,9 @@
         android:id="@+id/title_edit"
         style="@style/Details_Edit_box"
         android:hint="@string/fill_the_title"
-        android:maxLines="1"
+        android:lines="1"
+        android:inputType="text"
+        android:nextFocusDown="@id/desc_edit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +48,10 @@
         android:id="@+id/desc_edit"
         style="@style/Details_Edit_box"
         android:hint="@string/fill_the_description"
-        android:maxLines="2"
+        android:lines="2"
+        android:inputType="text"
+        android:maxLength="150"
+        android:imeOptions="actionGo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,14 +70,17 @@
         app:layout_constraintTop_toBottomOf="@+id/desc_edit"
         app:layout_constraintVertical_bias="0.0" />
 
-    <androidx.appcompat.widget.AppCompatEditText
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/date_edit"
         style="@style/Details_Edit_box"
+        android:layout_height="50dp"
         android:layout_marginEnd="150dp"
         android:hint="@string/date_format"
+        android:gravity="center_vertical"
         android:maxLines="1"
         android:inputType="date"
         android:maxLength="10"
+        android:imeOptions="actionDone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
