--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="orangish_yellow">#FFA500</color>
     <color name="pale_grey">#D3D3D3</color>
     <color name="dark_grey">#5A5A5A</color>
+    <color name="darker_grey">#222222</color>
+    <color name="darker_grey2">#161616</color>
 </resources>
